<resources>
    <string name="app_name">DnD 3.5 Character Creator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_character_screen">""</string>
    <string name="title_activity_new_character">NewCharacter</string>
    <string name="new_char_name_label">Name:*</string>
    <string name="new_char_race_label">Race:*</string>
    <string name="new_char_class_label">Class:*</string>
    <string name="new_char_runspeed_label">Runspeed:*</string>
    <string name="new_char_customclass_label">Class Name:*</string>
    <string name="strength_required">STR*</string>
    <string name="dexterity_required">DEX*</string>
    <string name="constitution_required">CON*</string>
    <string name="intellect_required">INT*</string>
    <string name="wisdom_required">WIS*</string>
    <string name="charisma_required">CHA*</string>
    <string name="fortitude_required">FOR*</string>
    <string name="reflex_required">REF*</string>
    <string name="will_required">WIL*</string>
    <string name="strength">STR</string>
    <string name="dexterity">DEX</string>
    <string name="constitution">CON</string>
    <string name="intellect">INT</string>
    <string name="wisdom">WIS</string>
    <string name="charisma">CHA</string>
    <string name="fortitude">FOR</string>
    <string name="reflex">REF</string>
    <string name="will">WIL</string>
    <string name="create">Create!</string>
    <string-array name="editcharactions">
        <item name="char_screen_summary">Summary</item>
        <item name="char_screen_hp">Hit Points</item>
        <item name="char_screen_temp">Temp</item>
        <item name="char_screen_misc">Misc</item>
        <item name="char_screen_spells">Spells</item>
        <item name="char_screen_levelup">Level Up</item>
        <item name="char_screen_Inventory">Inventory</item>
        <item name="char_screen_abilities">Abilities</item>
        <item name="char_screen_dmgred">Dmg.Red &amp; Sp.Resist</item>
        <item name="char_screen_equipment">Equipment</item>
        <item name="char_screen_feat">Feat</item>
        <item name="char_screen_Langauges">Languages</item>
        <item name="char_screen_spabilities">Special Abilities</item>
        <item name="char_screen_stats">Stats</item>
        <item name="char_screen_Weapon">Weapon</item>
        <item name="char_screen_CharInfo">CharInfo</item>
    </string-array>

    <string name="title_activity_level_up">LevelUp</string>
    <string name="level_up_class_label">Class*</string>
    <string name="level_up_liferoll_label">Liferoll*</string>
    <string name="level_up_attack_bonus_label">AtkBonus*</string>
    <string name="level_up_new_stat_label">Improved Stat</string>
    <string name="level_up_customclass_label">Custom Class Name*</string>
    <string name="abilities_ability_label">Ability</string>
    <string name="abilities_value_label">New Value*</string>
    <string name="apply">Apply</string>
    <string name="add">Add</string>
    <string name="title_activity_abilities">Abilities</string>
    <string name="title_activity_stats">Stats</string>
    <string name="action_clear_misc">ClearMisc</string>
    <string name="action_load_data">Load Data</string>
    <string name="action_save_data">Save Data</string>
    <string name="action_clear_temp">X</string>
    <string name="action_clear_temp_hp">ClearTempHP</string>
    <string name="action_hit_points">HP</string>
    <string name="action_set_temp">Temp</string>
    <string name="title_activity_misc">Misc</string>
    <string name="misc_ac_label">Armor Class</string>
    <string name="misc_attack_roll_label">Attack Roll</string>
    <string name="misc_max_hp_label">Max Hp</string>
    <string name="misc_initiative_label">Initiative</string>
    <string name="temp_ac_label">Armor Class</string>
    <string name="temp_attack_roll_label">Attack Roll</string>
    <string name="temp_max_hp_label">Max Hp</string>
    <string name="temp_initiative_label">Initiative</string>
    <string name="temp_status_label">Statuses</string>
    <string name="temp_new_status_label">New Status*</string>
    <string name="magic">Magic</string>
    <string name="title_activity_temp">Temp</string>
    <string name="title_activity_hit_points">HitPoints</string>
    <string name="hitpoints_damage_label">Damage</string>
    <string name="hitpoints_heal_label">Heal</string>
    <string name="title_activity_weapons">Weapons</string>
    <string name="title_activity_new_weapon">NewWeapon</string>
    <string name="new_weapon_critminrange_label">Critical range: x-20*</string>
    <string name="new_weapon_critmult_label">Critical Multiplier*</string>
    <string name="new_weapon_damagedices_label">Damage dices*</string>
    <string name="new_weapon_damagemod_label">mod*</string>
    <string name="new_weapon_name_label">Name*</string>
    <string name="new_weapon_notes_label">Note</string>
    <string name="new_weapon_range_label">Range*</string>
    <string name="new_weapon_ranged_label">Ranged</string>
    <string name="new_weapon_stat_label">Weapon stat*</string>
    <string name="new_weapon_type_label">Type</string>
    <string name="new_weapon_additionaldamage_label">Add.Damage</string>
    <string name="new_weapon_attack_bonus_label">AtkBonus</string>
    <string name="title_activity_equipment">EquipmentActivity</string>
    <string name="title_activity_new_equipment">NewEquipment</string>
    <string name="new_equipment_acbonus_label">AC Bonus</string>
    <string name="new_equipment_deflectionbonus_label">Deflection Bonus</string>
    <string name="new_equipment_maxdex_label">Max Dex*</string>
    <string name="new_equipment_naturalbonus_label">Natural Bonus</string>
    <string name="new_equipment_savepenalty_label">AC Penalty</string>
    <string name="new_equipment_speed_label">Speed</string>
    <string name="new_equipment_spellfail_label">Spell Fail</string>
    <string name="new_equipment_weight_label">Weight</string>
    <string name="new_equipment_type_label">Type*</string>
    <string name="new_equipment_name_label">Name*</string>
    <string name="new_equipment_special_label">Special Properties</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="delete">x</string>
    <string name="description">D</string>
    <string name="set">Set</string>
    <string name="title_activity_damage_reduction">DamageReduction</string>
    <string name="damage_reduction_damage_reduction_label">Damage Reduction</string>
    <string name="damage_reduction_spell_resist_label">Spell Resist</string>
    <string name="title_activity_feat">Feat</string>
    <string name="feats_new_feat_name_label">Name:*</string>
    <string name="feats_new_feat_desc_label">Description:</string>
    <string name="feats_list_label">Feats:</string>
    <string name="title_activity_inventory">Inventory</string>
    <string name="inventory_new_item_name_label">Name:*</string>
    <string name="inventory_new_item_amount_label">Amount:*</string>
    <string name="inventory_list_label">Inventory:</string>
    <string name="languages_new_language_name_label">Language:*</string>
    <string name="languages_list_label">Languages:</string>
    <string name="title_activity_languages">Languages</string>
    <string name="title_activity_special_abilities">SpecialAbilities</string>
    <string name="specialabilities_new_specialability_name_label">Name:*</string>
    <string name="specialabilities_list_label">Special Abilities:</string>
    <string name="title_activity_spells">Spells</string>
    <string name="spells_list_label">Spells</string>
    <string name="spells_new_spell_name_label">Name*</string>
    <string name="spells_new_spell_descr_label">Description</string>
    <string name="spells_new_spell_lvl_label">Level*</string>
    <string name="title_activity_char_info">CharInfo</string>
    <string name="title_activity_exp">Exp</string>
    <string name="ns_menu_open">Open Drawer</string>
    <string name="ns_menu_close">Close Drawer</string>

    <!--<string name="char_screen_levelup">Level Up</string>-->
    <!--<string name="char_screen_abilities">Abilities</string>-->
    <!--<string name="char_screen_spells">Spells</string>-->
    <!--<string name="char_screen_dmgred">Dmg.Red &amp; Sp.Resist</string>-->
    <!--<string name="char_screen_equipment">Equipment</string>-->
    <!--<string name="char_screen_feat">Feat</string>-->
    <!--<string name="char_screen_hp">Hit Points</string>-->
    <!--<string name="char_screen_Inventory">Inventory</string>-->
    <!--<string name="char_screen_Langauges">Languages</string>-->
    <!--<string name="char_screen_misc">Misc</string>-->
    <!--<string name="char_screen_spabilities">Special Abilities</string>-->
    <!--<string name="char_screen_stats">Stats</string>-->
    <!--<string name="char_screen_temp">Temp</string>-->
    <!--<string name="char_screen_Weapon">Weapon</string>-->
    <!--<string name="char_screen_CharInfo">CharInfo</string>-->
</resources>
