<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/spell_item_layout"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="6dip"
    tools:context="com.skij.dndcharacter.Spells.CustomSpellAdapter">


    <LinearLayout
        android:id="@+id/spell_item_buttonslayout"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true">

        <Button
            android:id="@+id/spell_item_minus"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="@string/minus"
            android:gravity="center"
            android:padding="0dp"
            android:layout_marginLeft="8dp"
/>
        <Button
            android:id="@+id/spell_item_plus"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="@string/plus"
            android:gravity="center"
            android:padding="0dp"
            android:layout_marginLeft="4dp"
            />

        <Button
            android:id="@+id/spell_item_description"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="@string/description"
            android:gravity="center"
            android:padding="0dp"
            android:layout_marginLeft="4dp"
            />

        <Button
            android:id="@+id/spell_item_delete"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="14dp"
            android:text="@string/delete"
            android:gravity="center"
            android:padding="0dp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/spell_item_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_toLeftOf="@id/spell_item_buttonslayout"
        android:ellipsize="end"
        android:text="Descriptionlungaungaunga"
        android:textSize="24sp" />
</RelativeLayout>