<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.skij.dndcharacter.CharacterScreen">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/new_char_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_char_name_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/new_char_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/new_char_race_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_char_race_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/new_char_race"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/new_char_class_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_char_class_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/new_char_class_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/new_char_runspeed_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_char_runspeed_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/new_char_runspeed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/strength"
                        android:id="@+id/new_char_str_label" />

                    <EditText
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:id="@+id/new_char_str" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/dexterity"
                        android:id="@+id/new_char_dex_label" />

                    <EditText
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:id="@+id/new_char_dex" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/constitution"
                        android:id="@+id/new_char_con_label" />

                    <EditText
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:id="@+id/new_char_con" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/intellect"
                        android:id="@+id/new_char_int_label" />

                    <EditText
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:id="@+id/new_char_int" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/wisdom"
                        android:id="@+id/new_char_wis_label" />

                    <EditText
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:id="@+id/new_char_wis" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/charisma"
                        android:id="@+id/new_char_cha_label" />

                    <EditText
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:id="@+id/new_char_cha" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/fortitude"
                        android:id="@+id/new_char_for_label" />

                    <EditText
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:id="@+id/new_char_for" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/reflex"
                        android:id="@+id/new_char_ref_label" />

                    <EditText
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:id="@+id/new_char_ref" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/will"
                        android:id="@+id/new_char_wil_label" />

                    <EditText
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:id="@+id/new_char_wil" />
                </LinearLayout>
            </LinearLayout>



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:onClick="createNewCharacter"/>

    </LinearLayout>


</RelativeLayout>